# slow5-rs

./: .gitignore  .gitmodules  CHANGELOG  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml  tarpaulin.toml  test.blow5
.github/workflows/: coverage.yml  rust.yml
examples/: auxiliary_field.rs  auxiliary_field_enum.rs  derive_aux.rs  example.slow5.idx  example3.blow5  read_blow5.rs  sequential_read.rs  write.rs
examples/parallel-read/: Cargo.toml  README.md
examples/parallel-read/src/: main.rs
examples/slow5-serde/: Cargo.toml  README.md
examples/slow5-serde/src/: main.rs
slow5/: Cargo.toml
slow5-derive/: Cargo.toml  README.md
slow5-derive/src/: lib.rs
slow5-typed/: Cargo.toml
slow5-typed/src/: header.rs  lib.rs  reader.rs  record.rs
slow5/examples/: auxiliary_field.rs  derive_aux.rs  example.slow5  example.slow5.idx  example2.slow5  example3.blow5  example3.blow5.idx  sequential_read.rs  write.rs
slow5/src/: aux.rs  error.rs  header.rs  lib.rs  reader.rs  record.rs  writer.rs
slow5/src/experimental/: field_t.rs  mod.rs  record.rs  write.rs
slow5/src/typed/: header.rs  reader.rs  record.rs
slow5/tests/: derive.rs
slow5lib-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
slow5lib-sys/examples/: header_attribute.rs  random_read.rs  write.rs
slow5lib-sys/src/: lib.rs
slow5lib-sys/tests/: header_attribute.rs  random_read.rs  version.rs
src/: aux.rs  auxiliary.rs  compression.rs  error.rs  header.rs  lib.rs  log.rs  reader.rs  record.rs  writer.rs
src/experimental/: mod.rs  record.rs
src/typed/: header.rs  mod.rs  reader.rs  record.rs
tests/: compression.rs  derive.rs  full.rs  overwrite.rs  random_read.rs  read_blow5.rs
