[workspace]

members = [
    "slow5",
    "slow5-derive",
    "slow5lib-sys",
]

[workspace.package]
authors = ["Brandon Saint-John <bsaintjo@ucsc.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bsaintjo/slow5-rs"

[workspace.dependencies]
version-sync = "0.9.4"
cstr = "0.2.10"
libc = "0.2.126"