[workspace]
members = [
    # "slow5-typed",
    "slow5-derive",
    "slow5lib-sys",
    "examples/parallel-read",
    "examples/slow5-serde",
]

[workspace.package]
authors = ["Brandon Saint-John <bsaintjo@ucsc.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bsaintjo/slow5-rs"
rust-version = "1.65"

[workspace.dependencies]
version-sync = "0.9.4"
cstr = "0.2.10"
libc = "0.2.126"

[package]
name = "slow5"
version = "0.10.0"
readme = "README.md"
homepage = "https://github.com/hasindu2008/slow5lib"
description = "Library for interacting with slow5"
documentation = "https://docs.rs/slow5"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
cstr.workspace = true
libc.workspace = true
log = "0.4.17"
paste = "1.0.9"
serde = { version = "1.0.152", optional = true }
slow5lib-sys = { version = "0.8.0", path = "./slow5lib-sys", default-features = false }
thiserror = "1.0.30"

[dev-dependencies]
anyhow = "1.0.56"
assert_fs = "1.0.7"
doc-comment = "0.3.3"
serde_test = "1.0.152"
version-sync.workspace = true

[features]
default = ["zstd"]
zstd = ["slow5lib-sys/zstd"]
zlib-ng = ["slow5lib-sys/zlib-ng"]
serde = ["dep:serde"]
