[package]
name = "slow5-derive"
version = "0.1.0"
readme = "README.md"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
syn = "1.0.103"
