[package]
name = "slow5-derive"
version = "0.1.0"
readme = "README.md"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = "1.0.103"
