[package]
name = "slow5"
version = "0.8.0"
readme = "README.md"
homepage = "https://github.com/hasindu2008/slow5lib"
description = "Library for interacting with slow5"
documentation = "https://doc.rs/slow5"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr.workspace = true
libc.workspace = true
log = "0.4.17"
paste = "1.0.9"
slow5lib-sys = { version = "0.7.0", path="../slow5lib-sys" }
thiserror = "1.0.30"

[dev-dependencies]
anyhow = "1.0.56"
assert_fs = "1.0.7"
version-sync.workspace = true
