[package]
name = "slow5lib-sys"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
authors = ["Brandon Saint-John <bsaintjo@ucsc.edu>"]
repository = "https://github.com/bsaintjo/slow5-rs"
homepage = "https://github.com/hasindu2008/slow5lib"
description = "Low-level bindings to the slow5lib C library"
documentation = "https://doc.rs/slow5lib-sys"

links = "slow5lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0.73"
dunce = "1.0.2"

[dependencies]
libz-sys = "1.1.5"
zstd-sys = "2.0.1"