[package]
name = "slow5lib-sys"
version = "0.8.0+slow5lib.0.8.0"
readme = "README.md"
homepage = "https://github.com/hasindu2008/slow5lib"
description = "Low-level bindings to the slow5lib C library"
documentation = "https://docs.rs/slow5lib-sys"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

links = "slow5lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.59.2"
cc = "1.0.73"
dunce = "1.0.2"

[dependencies]
libz-sys = { version = "1.1.5", default-features = false, features = ["libc"] }
zstd-sys = { version = "2.0.1", optional = true }
libc.workspace = true

[dev-dependencies]
cstr.workspace = true
version-sync.workspace = true

[features]
default = ["zstd"]
zstd = ["zstd-sys"]
zlib-ng = ["libz-sys/zlib-ng"]
