[package]
name = "slow5lib-sys"
version = "0.9.0+slow5lib.1.0.0"
readme = "README.md"
homepage = "https://github.com/hasindu2008/slow5lib"
description = "Low-level bindings to the slow5lib C library"
documentation = "https://docs.rs/slow5lib-sys"

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

links = "slow5lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.63.0"
cc = "1.0.79"
dunce = "1.0.3"

[dependencies]
libz-sys = { version = "1.1.8", default-features = false, features = ["libc"] }
zstd-sys = { version = "2.0.6+zstd.1.5.2", optional = true }
libc.workspace = true

[dev-dependencies]
cstr.workspace = true
version-sync.workspace = true

[features]
default = ["zstd"]
zstd = ["zstd-sys"]
zlib-ng = ["libz-sys/zlib-ng"]
